test/Transforms/Flattening/instantiate_column_field_fail.llzk
// RUN: llzk-opt -split-input-file %s -llzk-flatten -verify-diagnostics

module attributes {llzk.lang} {
  poly.template @TComponentA1 {
    poly.param @T

    struct.def @ComponentA1 {
      // expected-error@+1 {{'struct.member' op marked as column can only contain felts, arrays of column types, or structs with columns, but has type 'index'}}
      struct.member @f1 : !poly.tvar<@T> {column, llzk.pub}

      function.def @constrain(%self: !struct.type<@TComponentA1::@ComponentA1<[@T]>>) { function.return }
      function.def @compute() -> !struct.type<@TComponentA1::@ComponentA1<[@T]>> {
        %self = struct.new : !struct.type<@TComponentA1::@ComponentA1<[@T]>>
        function.return %self : !struct.type<@TComponentA1::@ComponentA1<[@T]>>
      }
    }
  }

  struct.def @ComponentA2 {
    function.def @compute(%p: !struct.type<@TComponentA1::@ComponentA1<[index]>>) -> !struct.type<@ComponentA2> {
      %self = struct.new : !struct.type<@ComponentA2>
      %r = struct.readm %p[@f1] : !struct.type<@TComponentA1::@ComponentA1<[index]>>, index {tableOffset = -1 : index}
      function.return %self : !struct.type<@ComponentA2>
    }

    function.def @constrain(%self: !struct.type<@ComponentA2>, %p: !struct.type<@TComponentA1::@ComponentA1<[index]>>) {
      function.return
    }
  }
}

// -----

module attributes {
  llzk.lang,
  llzk.main = !struct.type<@OffsetTemplate::@Main<[#felt<const 35 : !felt.type<"bn128">>]>>
} {
  poly.template @OffsetTemplate {
    poly.param @Offset

    struct.def @Main {
      struct.member @value : !felt.type<"bn128"> {column, llzk.pub}

      function.def @compute() -> !struct.type<@OffsetTemplate::@Main<[@Offset]>> {
        %self = struct.new : <@OffsetTemplate::@Main<[@Offset]>>
        // expected-error@+2 {{'struct.readm' op table offset requires an integer template value}}
        // expected-error@+1 {{failed to legalize operation 'struct.readm'}}
        %value = struct.readm %self[@value] : <@OffsetTemplate::@Main<[@Offset]>>, !felt.type<"bn128"> {tableOffset = @Offset}
        function.return %self : !struct.type<@OffsetTemplate::@Main<[@Offset]>>
      }

      function.def @constrain(%self: !struct.type<@OffsetTemplate::@Main<[@Offset]>>) {
        function.return
      }
    }
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Data {
    struct.member @value : !felt.type<"bn128"> {column, llzk.pub}

    function.def @compute() -> !struct.type<@Data> {
      %self = struct.new : !struct.type<@Data>
      function.return %self : !struct.type<@Data>
    }

    function.def @constrain(%self: !struct.type<@Data>) {
      function.return
    }
  }

  poly.template @OffsetTemplate {
    poly.param @Offset

    function.def @read(%data: !struct.type<@Data>) -> !felt.type<"bn128"> {
      // expected-error@+2 {{'struct.readm' op table offset requires an integer template value}}
      // expected-error@+1 {{failed to legalize operation 'struct.readm'}}
      %value = struct.readm %data[@value] : <@Data>, !felt.type<"bn128"> {tableOffset = @Offset}
      function.return %value : !felt.type<"bn128">
    }
  }

  function.def @main(%data: !struct.type<@Data>) -> !felt.type<"bn128"> {
    // expected-error@+1 {{failure while creating instantiated function 'OffsetTemplate__read'}}
    %value = function.call @OffsetTemplate::@read<[#felt<const 35 : !felt.type<"bn128">>]>(%data) : (!struct.type<@Data>) -> !felt.type<"bn128">
    function.return %value : !felt.type<"bn128">
  }
}
